# ocaml-ai-disclosure

./: LICENSE.md  README.md  dune-project  opam-ai-disclosure.opam  opam-ai-disclosure.opam.template
lib/: ai_disclosure.ml  ai_disclosure.mli  dune
